# cookiecutter-python-package

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: input-for-demo.txt  update_demo.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_name }}/docs/: api.md  changelog.md
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_name }}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/: README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
