[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.short_description }}"
authors = [{name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "{{ cookiecutter.development_status }}",
    {% if cookiecutter.license == 'mit' -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == 'gpl-3.0' -%}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    {% elif cookiecutter.license == 'apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif cookiecutter.license == 'gpl-2.0' -%}
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    {% elif cookiecutter.license == 'bsd-3-clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.license == 'agpl-3.0' -%}
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    {% elif cookiecutter.license == 'unlicense' -%}
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    {% endif -%}
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = "~=3.9"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
dev = [
    "{{ cookiecutter.project_name }}[tests,docs]",
]

[project.urls]
Documentation = "https://{{ cookiecutter.project_name }}.readthedocs.io/en/stable/"
Changelog = "https://{{ cookiecutter.project_name }}.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
"Issue Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues"

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "E501",  # line too long (pycodestyle), handled by ruff-format
    "ANN003",  # missing-type-kwargs (flake8-annotations)
    "ANN401",  # any-type (flake8-annotations)
    "COM",  # flake8-commas, handled by ruff-format
    "CPY",  # flake8-copyright
    "ISC001",  # single-line-implicit-string-concatenation (flake8-implicit-str-concat)
    "INP",  # flake8-no-pep420
]
src = ["src", "tests", "docs"]
target-version = "py39"  # the minimum Python version supported, used by pyupgrade

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import (Pyflakes)
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "ANN201",  # missing-return-type-undocumented-public-function (flake8-annotations)
    "S101",   # assert (flake8-bandit)
    "SIM300",   # yoda-conditions (flake8-simplify)
    "PLR2004",   # magic-value-comparison (Pylint)
]
"docs/conf.py" = [
    "A001",  # builtin-variable-shadowing (flake8-builtins)
]
"noxfile.py" = [
    "D100",  # undocumented-public-module (pydocstyle)
    "ERA001",  # commented-out-code (eradicate)
]

[tool.ruff.lint.isort]
known-first-party = [
  "{{ cookiecutter.project_name }}",
  "tests",
]
lines-between-types = 0

[tool.ruff.lint.pydocstyle]
convention = "google"
