[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_name }}"
authors = [{name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "{{cookiecutter.development_status}}",
    {% if cookiecutter.license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License"
    {% elif cookiecutter.license == 'GPL-3.0' -%}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    {% endif -%}
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = "~=3.7"
dependencies = []
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "autoflake",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pyupgrade",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-copybutton",
    "sphinxext-opengraph"
]
tests = [
    "pytest"
]

[project.urls]
Documentation = "https://{{ cookiecutter.project_name }}.readthedocs.io/en/stable/"
Changelog = "https://{{ cookiecutter.project_name }}.readthedocs.io/en/stable/changelog.html"
"Source code" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues"

{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
[tool.flit.module]
name = "{{ cookiecutter.package_name }}"
{% endif -%}

[tool.isort]
profile = "black"
